fixed spacing bug

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,5 @@
 #root {
-  max-width: 85%;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
 }
