--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   /* color-scheme: light dark; */
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(255, 255, 255);
   background-color: #242424;
 
   --button-color: #1a1a1a;
@@ -19,8 +19,7 @@
 body {
   margin: 0;
   display: block;
-  place-items: center;
-  min-width: 320px;
+  min-width: 1000px;
   min-height: 100vh;
 }
 
@@ -31,7 +30,7 @@ h1 {
 
 button.note {
   border-radius: 50px;
-  width: 40px;
+  width: 100px;
   height: 40px;
   padding: 0px;
   margin: 2px;
@@ -40,6 +39,14 @@ button.note {
 
 button.note:active {
   background-color: rgb(65, 65, 65);
+}
+
+Fretboard {
+  width: 1000px;
+}
+
+div.builder {
+  width: 100%;
 }
 
 button {
@@ -70,7 +77,7 @@ button.tabList {
 button.tablature {
   border-style: none;
   background: none;
-  padding: 7px;
+  padding: 3px;
 }
 
 button.tablature:hover {
@@ -89,6 +96,10 @@ li.track {
   padding-left: 6px;
   padding-right: 6px;
   margin-bottom: 10px;
+}
+
+input{
+  color: white;
 }
 
 input.searchBar {
@@ -141,7 +152,6 @@ div.shareBlock {
   background-color: var(--background-light);
 
   button {
-    
     margin: 5px;
   }
 }
